@@ -33,6 +33,7 @@
 #include "core/capabilities/OrganiseCapability.h"
 #include "core/collections/support/SqlStorage.h"
 #include "core/meta/support/MetaConstants.h"
+#include "core-impl/capabilities/AlbumActionsCapability.h"
 #include "core-impl/capabilities/timecode/TimecodeLoadCapability.h"
 #include "core-impl/capabilities/timecode/TimecodeWriteCapability.h"
 #include "amarokurls/PlayUrlRunner.h"
@@ -42,38 +43,6 @@
 #include <QFile>
 #include <QList>
 
-class CompilationAction : public QAction
-{
-    Q_OBJECT
-    public:
-        CompilationAction( QObject* parent, Meta::SqlAlbumPtr album )
-                : QAction( parent )
-                , m_album( album )
-                , m_isCompilation( album->isCompilation() )
-            {
-                connect( this, SIGNAL( triggered( bool ) ), SLOT( slotTriggered() ) );
-                if( m_isCompilation )
-                {
-                    setIcon( KIcon( "filename-artist-amarok" ) );
-                    setText( i18n( "Do not show under Various Artists" ) );
-                }
-                else
-                {
-                    setIcon( KIcon( "similarartists-amarok" ) );
-                    setText( i18n( "Show under Various Artists" ) );
-                }
-            }
-
-    private slots:
-        void slotTriggered()
-        {
-            m_album->setCompilation( !m_isCompilation );
-        }
-
-    private:
-        Meta::SqlAlbumPtr m_album;
-        bool m_isCompilation;
-};
 
 namespace Capabilities {
 
@@ -405,7 +374,6 @@ AlbumCapabilityDelegateImpl::hasCapabilityInterface( Capabilities::Capability::T
     switch( type )
     {
         case Capabilities::Capability::Actions:
-            return true;
         case Capabilities::Capability::BookmarkThis:
             return true;
         default:
@@ -417,33 +385,14 @@ Capabilities::Capability*
 AlbumCapabilityDelegateImpl::createCapabilityInterface( Capabilities::Capability::Type type, Meta::SqlAlbum *album )
 {
     if( !album )
-    {
         return 0;
-    }
 
     switch( type )
     {
         case Capabilities::Capability::Actions:
-        {
-            QList<QAction*> actions;
-            actions.append( new CompilationAction( 0, Meta::SqlAlbumPtr( album ) ) );
-            actions.append( new FetchCoverAction( 0, Meta::AlbumPtr( album ) ) );
-            actions.append( new SetCustomCoverAction( 0, Meta::AlbumPtr( album ) ) );
-            QAction *displayCoverAction = new DisplayCoverAction( 0, Meta::AlbumPtr( album ) );
-            QAction *unsetCoverAction   = new UnsetCoverAction( 0, Meta::AlbumPtr( album ) );
-
-            if( !album->hasImage() )
-            {
-                displayCoverAction->setEnabled( false );
-                unsetCoverAction->setEnabled( false );
-            }
-            actions.append( displayCoverAction );
-            actions.append( unsetCoverAction );
-            return new Capabilities::ActionsCapability( actions );
-        }
+            return new Capabilities::AlbumActionsCapability( Meta::AlbumPtr( album ) );
         case Capabilities::Capability::BookmarkThis:
             return new Capabilities::BookmarkThisCapability( new BookmarkAlbumAction( 0, Meta::AlbumPtr( album ) ) );
-
         default:
             return 0;
     }
