@@ -196,7 +196,7 @@ public:
     virtual void setImage( const QImage &image );
 
     virtual bool hasCapabilityInterface( Capabilities::Capability::Type type ) const;
-    virtual Capabilities::Capability* asCapabilityInterface( Capabilities::Capability::Type type );
+    virtual Capabilities::Capability* createCapabilityInterface( Capabilities::Capability::Type type );
 
     //TimecodeAlbum specific methods
     void addTrack( TimecodeTrackPtr track );
